<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="data" Id="{738636ab-c56d-46f6-b65f-f88fc6472ba3}">
    <Declaration><![CDATA[TYPE data :
STRUCT
	boEnable 		:BOOL;
	boStart 		:BOOL;
	lrPosition  	:LREAL;
	lrVelocity  	:LREAL;
	lrAcceleration 	:LREAL;
	lrDeceleration 	:LREAL;
	lrJerk 			:LREAL;
	
	lrActualPos 	:LREAL;
	lrActualVelo	:LREAL;
	lrActualAcc 	:LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>