<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{8a525c67-4920-4136-bf9a-29393a240c19}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stData	:data;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>